--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "dev": "nodemon src/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gtodesco/ts_backend.git"
-  },
+  "repository": "git+https://github.com/gtodesco/ts_backend.git",
   "keywords": [],
-  "author": "",
+  "author": "Gabriel Todesco <gabriel.todesco97@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gtodesco/ts_backend/issues"
